0.5.4 (2/5/2009)
================

Features
--------

- A newer path index implementation importable as
  ``repoze.catalog.path2.CatalogPathIndex2`` has been added as another
  index type.  The path2 index type is an improvement inasmuch as it
  actually uses a graph to represent structure instead of the "levels"
  scheme pioneered within Zope2 (and used by
  ``repoze.catalog.path.CatalogPathIndex``). By eye, the "levels"
  scheme looks like it can return the wrong results for any given path
  for a sufficiently dense tree.

- Catalog indexes must now supply an ``apply_intersect`` method; it
  receives a query and a set of docids (the result intersection "so
  far").  It should have the same sort of return value as the
  ``apply`` method.  Indexes which inherit from
  ``common.CatalogIndex`` will inherit a default implementation.

- It is now possible to specify index query/merge order within a
  catalog query.  See ``Index Query/Merge Order`` in the docs.

0.5.3 (1/5/2009)
================

Features
--------

- Better detection of when to use fwdscan on ascending sorts in field
  indexes.

- Better detection of when to use nbest vs. timsort on ascending sorts
  in field indexes.

0.5.2 (1/4/2009)
================

Features
--------

- Allow a new catalog search method keyword: ``sort_type``.  For
  ascending sorts, this can be one of ``nbest``, ``fwscan``, or
  ``timsort``.  For descending sorts, only ``nbest`` and ``timsort``
  are supported.  This argument allows fine-grained control of what
  algorithm should be chosen to perform sorting within FieldIndex
  code.

- Better automatic detection of which sort algorithm to use (when it's
  not supplied via ``sort_type``) based on empirical testing.

- Depend on zope.index 3.5.0 rather than any earlier version
  (repoze.catalog fixes migrated upstream in zope.index 3.5.0).

 - Add 'sortbench' script to test various field index sort strategies
   (requires 'benchmark' extra to create charts).

Bug Fixes
---------
